[gd_scene format=3]

[ext_resource type="PackedScene" path="res://scenes/background.tscn" id="1_bg"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="2_menu"]
[ext_resource type="AudioStream" path="res://sounds/Misery_Loves.wav" id="3_bgm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.04, 0.06, 0.1, 0.76)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.74, 0.56, 0.36, 0.66)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color(0, 0, 0, 0.54)
shadow_size = 9
shadow_offset = Vector2(0, 5)
content_margin_left = 20.0
content_margin_top = 18.0
content_margin_right = 20.0
content_margin_bottom = 18.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.17, 0.22, 0.92)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.7, 0.56, 0.36, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.2, 0.22, 0.28, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.94, 0.78, 0.48, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.13, 0.14, 0.18, 0.98)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.9, 0.74, 0.46, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Menu" type="Node2D"]
script = ExtResource("2_menu")

[node name="Background" parent="." instance=ExtResource("1_bg")]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bgm")
volume_db = -8.0
autoplay = true

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 40

[node name="MenuCard" type="PanelContainer" parent="UILayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -188.0
offset_right = 188.0
offset_bottom = 52.0
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="MenuVBox" type="VBoxContainer" parent="UILayer/MenuCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="UILayer/MenuCard/MenuVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 58
theme_override_constants/outline_size = 4
theme_override_colors/font_color = Color(0.97, 0.92, 0.86, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
horizontal_alignment = 1
text = "PIXELIA"

[node name="SkullLabel" type="Label" parent="UILayer/MenuCard/MenuVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_colors/font_color = Color(0.93, 0.88, 0.88, 1)
horizontal_alignment = 1
text = "*"

[node name="SubtitleLabel" type="Label" parent="UILayer/MenuCard/MenuVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.9, 0.82, 0.72, 0.97)
horizontal_alignment = 1
text = "Noite Eterna"

[node name="PlayButton" type="Button" parent="UILayer/MenuCard/MenuVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.98, 0.94, 0.87, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Jogar"

[node name="OptionsButton" type="Button" parent="UILayer/MenuCard/MenuVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.98, 0.94, 0.87, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Opcoes"

[node name="QuitButton" type="Button" parent="UILayer/MenuCard/MenuVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.98, 0.94, 0.87, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Sair"

[node name="OptionsCard" type="PanelContainer" parent="UILayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -142.0
offset_right = 210.0
offset_bottom = 142.0
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="OptionsVBox" type="VBoxContainer" parent="UILayer/OptionsCard"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionsTitleLabel" type="Label" parent="UILayer/OptionsCard/OptionsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
theme_override_constants/outline_size = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.84, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
horizontal_alignment = 1
text = "Opcoes"

[node name="VolumeRow" type="HBoxContainer" parent="UILayer/OptionsCard/OptionsVBox"]
layout_mode = 2
alignment = 1

[node name="VolumeLabel" type="Label" parent="UILayer/OptionsCard/OptionsVBox/VolumeRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.9, 0.84, 0.75, 1)
text = "Volume Mestre"

[node name="VolumeControls" type="HBoxContainer" parent="UILayer/OptionsCard/OptionsVBox"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="VolumeDownButton" type="Button" parent="UILayer/OptionsCard/OptionsVBox/VolumeControls"]
custom_minimum_size = Vector2(46, 34)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "-"

[node name="VolumeSlider" type="HSlider" parent="UILayer/OptionsCard/OptionsVBox/VolumeControls"]
custom_minimum_size = Vector2(210, 34)
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeUpButton" type="Button" parent="UILayer/OptionsCard/OptionsVBox/VolumeControls"]
custom_minimum_size = Vector2(46, 34)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "+"

[node name="VolumeValueLabel" type="Label" parent="UILayer/OptionsCard/OptionsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.87, 0.92, 1, 1)
horizontal_alignment = 1
text = "Volume: 100%"

[node name="BackButton" type="Button" parent="UILayer/OptionsCard/OptionsVBox"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Retornar"
